--- a/quiz-master/style.css
+++ b/quiz-master/style.css
@@ -571,18 +571,11 @@ footer button.show{
     }
 
     .result_box{
-        background: #fff;
-        border-radius: 5px;
-        display: flex;
-        padding: 25px 30px;
-        width: 450px;
-        align-items: center;
-        flex-direction: column;
-        justify-content: center;
-        transform: translate(-50%, -50%) scale(0.9);
-        opacity: 0;
-        pointer-events: none;
-        transition: all 0.3s ease;
+        border-radius: 20px;
+        width: 350px;
+        height: 616px;
+        position: fixed;
+        top: 45%;
     }
 }
 
